# rust-toolbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/commands/: create-task.md  design.md  implement-task.md
crates/raindrop-notebooklm-integration/: Cargo.toml
crates/raindrop-notebooklm-integration/docs/: design.md  requirements.md
crates/raindrop-notebooklm-integration/src/: main.rs
crates/raindrop-notebooklm-integration/tasks/: 1757935201_implement.md  1757936522_implement.md
docs/: coding-standards.md  functional-programming.md  tdd.md
